# mpm-sandbox

./: .gitignore  README.md  diff_practice.py  gp_opt.py  gp_plot.py  make_gif.py  make_ply.py  nerf_sandbox.ipynb  pyproject.toml  read_pcd.py  requirements.txt  run_mpm.py  run_mpm_opt.py  sandbox.py  sandbox3d.py  sandbox_tk.ply
engine/: mpm_solver.py
