[tool.poetry]
name = "diffmpm-wheel-optimize"
version = "0.1.0"
description = "Differentiable MPM code for robotic wheel optimization"
authors = ["chhsiao93 <chhsiao@utexas.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
taichi = "1.1.0"
plyfile = "^1.0.2"
imageio = "^2.33.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
